# Ergonektim

./: .gitignore  GLOSARIO.md  GLOSSARY.md  IDENTIDAD.md  IDENTITY.md  INPUT_BUNDLE.es.md  INPUT_BUNDLE.md  README.es.md  README.md  pyproject.toml
dashboard/: README.md  package-lock.json  package.json
dashboard/.openai/: hosting.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/tests/: rendered-html.test.mjs
dashboard/worker/: index.ts
examples/: run_synthetic_assessment.py
src/ergonektim/: __init__.py  _strict.py  artifact.py  cli.py  contracts.py  input_bundle.py  kernel_binding.py  observers.py  panel.py  reachability.py  signals.py  synthetic.py  telemetry.py
src/ergonektim/resources/: prama_v0_3_0_binding.json  status_registry.json
src/ergonektim/resources/locales/: en.json  es.json
src/ergonektim/resources/schemas/: diagnostic-signal.schema.json  input-bundle-manifest.schema.json
src/ergonektim/validation/: __init__.py  condition_null.py
tests/: test_artifact.py  test_boolean_boundaries.py  test_condition_null.py  test_external_contracts.py  test_input_bundle.py  test_observers.py  test_panel.py  test_reachability.py  test_signals.py
