[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ergonektim"
version = "0.1.0.dev1"
description = "Bilingual aptadynamic viability assessment for electric power systems"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "prama-protokol==0.3.0",
]
authors = [{ name = "G.A.C.J." }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]

[project.scripts]
ergonektim = "ergonektim.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ergonektim = ["resources/**/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
